# ClusterSKSolver

./: CMakeLists.txt  README.md
ClusterSKSolver/: CMakeLists.txt  ClusterSKSolver.cpp  ClusterSKSolver.h
ClusterSKSolver/examples/: SK_2x3_easy_1.txt  SudokuKillerTest1.txt  SudokuKillerTest3.txt  SudokuTest1.txt  SudokuTest2.txt  SudokuTest3.txt  SudokuTest4.txt  SudokuTest5.txt  SudokuTest6.txt  SudokuTest7.txt  SudokuTest8.txt  SudokuTest9.txt
ClusterSKSolver/header/: CentralSKSolver.h  DistributedSKSolver.h  SKLoader.h  SKSolver.h  SKUtils.h
ClusterSKSolver/source/: CentralSKSolver.cpp  DistributedSKSolver.cpp  SKLoader.cpp  SKSolver.cpp  SKUtils.cpp
